<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191970	"
    tools:context="MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="289dp"
        android:layout_height="361dp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="30sp"
        android:layout_marginRight="20sp"
        android:contentDescription="@string/imgtodo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14"
        app:srcCompat="@drawable/faxfacil_o_melhor_para_sua_casa_" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:backgroundTint="#1E90FF"
        android:text="@string/btnlogin"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:iconTint="#DA6E6E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_Não_tenho_cadastro"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:backgroundTint="#130D38"
        android:text="@string/n_o_tenho_cadastro"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>